--- a/css/main.css
+++ b/css/main.css
@@ -141,7 +141,7 @@ h5 {
 
 .header-nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 0 2.5rem;
   height: 7.2rem;
@@ -359,7 +359,19 @@ h5 {
 }
 
 .service-card {
-  flex: 33.33333333%;
+  flex: 30%;
+  background: #f7f7f7;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    margin: 5px;
+    padding: 15px 5px;
+}
+
+#projects .service-card {
+  
+  background: #f7f7f7;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    margin: 5px;
+    padding: 15px 5px;
 }
 
 .service-card-img {
@@ -369,10 +381,27 @@ h5 {
   /* filter: invert(33%) sepia(7%) saturate(243%) hue-rotate(145deg) */
     /* brightness(94%) contrast(81%); */
 }
-
+.repo-language-color {
+    position: relative;
+    top: 1px;
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    border: var(--borderWidth-thin) solid var(--borderColor-translucent);
+    border-radius: 50%;
+}
 .service-card-title {
   text-align: center;
   text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  margin-bottom: 1rem;
+  font-weight: 600;
+  font-size: 2rem;
+}
+
+#projects .service-card-title {
+  text-align: center;
+  text-transform: none;
   letter-spacing: 0.2rem;
   margin-bottom: 1rem;
   font-weight: 600;
